update to bootie-docs, add deploy

--- a/docs/themes/material-design/layouts/partials/header.html
+++ b/docs/themes/material-design/layouts/partials/header.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <ul id="slide-out" class="side-nav">
-    <li><a href="{{.Site.BaseURL}}"><i class="mdi-action-home left"></i>Home<i class="mdi-hardware-keyboard-arrow-right right"></i></a></li>
+    <li><a href="{{.Site.BaseURL}}"><i class="mdi-action-home left"></i>Home</a></li>
     <li><a href="{{.Site.BaseURL}}/categories"><i class="mdi-action-perm-media left"></i>Categories<i class="mdi-hardware-keyboard-arrow-right right"></i></a></li>
     <li><a href="{{.Site.BaseURL}}/tags"><i class="mdi-action-loyalty left"></i>Tags<i class="mdi-hardware-keyboard-arrow-right right"></i></a></li>
   </ul>
